--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 31
         versionCode 19
-        versionName '1.7.1'
+        versionName '1.7.2'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -35,4 +35,5 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation "androidx.preference:preference:1.1.1"
+    implementation 'com.joaomgcd:taskerpluginlibrary:0.4.1'
 }
